--- a/sentinel.conf
+++ b/sentinel.conf
@@ -1,6 +1,6 @@
 # specify path to goacoin.conf or leave blank
-# default is the same as goacoinCore
-#goacoin_conf=/home/YOUR HOME DIRECTORY/.goacoincore/goacoin.conf
+# default is the same as GoacoinCore
+#goacoin_conf=/home/evan82/.goacoincore/goacoin.conf
 
 # valid options are mainnet, testnet (default=mainnet)
 network=mainnet
